small alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
   display: flex;
-  justify-self: center;
+  justify-content: center;
   align-items: center;
 }
 h1 {
